# paper-summarizer

./: .gitignore  LICENSE  README.md  collect_pdfs.sh  pyproject.toml  requirements.txt
skill_data/references/: json-output-contract.md  learning-paradigms.md  output-template.md  snn-extraction-fields.md
summarizer/: __init__.py  batch.py  cli.py  llm.py  log.py  models.py  parser.py  pipeline.py  prompts.py  renderer.py
tests/: conftest.py  test_batch.py  test_cli.py  test_llm.py  test_log.py  test_models.py  test_openrouter_integration.py  test_parser.py  test_pipeline.py  test_prompts.py  test_renderer.py
